java/istio-demo/deployment/test/TestService-v1.yaml

##################################################################################################
# capability-service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: capability-service
  labels:
    app: capability
    service: capability
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: capability
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: capability-service-account
  labels:
    account: capability
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capability-v1
  labels:
    app: capability
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capability
      version: v1
  template:
    metadata:
      labels:
        app: capability
        version: v1
    spec:
      serviceAccountName: capability-service-account
      containers:
        - name: capability
          image: sinhasonalkumar/capability-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---

##################################################################################################
# discover-skills-service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: discover-skills-service
  labels:
    app: discover-skills
    service: discover-skills
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: discover-skills
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: discover-skills-service-account
  labels:
    account: discover-skills
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discover-skills-v1
  labels:
    app: discover-skills
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discover-skills
      version: v1
  template:
    metadata:
      labels:
        app: discover-skills
        version: v1
    spec:
      serviceAccountName: discover-skills-service-account
      containers:
        - name: discover-skills
          image: sinhasonalkumar/discover-skills-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
